Find parent working core for flag -s